[gd_scene load_steps=2 format=3 uid="uid://cj6x03h3lkf4k"]

[ext_resource type="Script" path="res://game_scenes/fishing_run/casting/casting.gd" id="1_fneoc"]

[node name="Casting" type="Node2D"]
script = ExtResource("1_fneoc")

[node name="CastingTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ReelingSoundTimer" type="Timer" parent="."]
one_shot = true

[node name="ReelingTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
